force-app/main/default/objects/FinServ__IdentificationDocument__c/fields/AddressContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>AddressContentDocumentId__c</fullName>
    <description>Address Content Document Id</description>
    <label>Address Content Document Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>