force-app/main/default/objects/FinServ__IdentificationDocument__c/fields/FinServ__DocumentType__c.field-meta.xml
<CustomField>
    <fullName>FinServ__DocumentType__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US Passport</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>State Id Card</fullName>
            </value>
            <value>
                <fullName>Military Id</fullName>
            </value>
            <value>
                <fullName>Address Proof</fullName>
            </value>
            <value>
                <fullName>Drivers License</fullName>
            </value>
            <value>
                <fullName>Tribal Id</fullName>
            </value>
            <value>
                <fullName>Social Security Card</fullName>
            </value>
            <value>
                <fullName>School Id</fullName>
            </value>
            <value>
                <fullName>Foreign Passport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>