force-app/main/default/objects/FinServ__IdentificationDocument__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Gender of identity</description>
    <label>Gender</label>
    <length>40</length>
    <type>Text</type>
</CustomField>