force-app/main/default/objects/FinServ__IdentificationDocument__c/fields/IssuedRegion__c.field-meta.xml
<CustomField>
    <fullName>IssuedRegion__c</fullName>
    <description>Identity issued region</description>
    <label>Issued Region</label>
    <length>40</length>
    <type>Text</type>
</CustomField>