force-app/main/default/objects/FinServ__IdentificationDocument__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <description>Nationality of the identity</description>
    <label>Nationality</label>
    <length>40</length>
    <type>Text</type>
</CustomField>