force-app/main/default/objects/FinServ__IdentificationDocument__c/fields/SecondaryContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>SecondaryContentDocumentId__c</fullName>
    <description>Secondary Content Document ID</description>
    <label>Secondary Content Document ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>